refactor faq, add self hosting answer

--- a/configuration/environment.mdx
+++ b/configuration/environment.mdx
@@ -14,6 +14,7 @@ This page answers:
 Deployments are currently built and run in our `shuttle-deployer` container, which is based on a Rust Bookworm docker image (Debian 12).
 
 The current Rust version is `1.72.0`, toolchain `stable-x86_64-unknown-linux-gnu`.
+It's not currently possible for you to change this, but being able to choose which toolchain your project will be compiled with is a planned feature.
 
 The targets `wasm32-wasi` and `wasm32-unknown-unknown` are installed, which enables compiling `shuttle-next` apps and WASM frontends.
 
