--- a/configuration/shuttle-versions.mdx
+++ b/configuration/shuttle-versions.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Shuttle versions"
-description: "How Shuttle versions work"
+description: "How Shuttle versioning works"
 ---
 
 - When you start or restart a project, a Shuttle `deployer` Docker container is started with the [latest released](https://github.com/shuttle-hq/shuttle/releases) version of Shuttle.
