--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -1,29 +1,31 @@
 ---
 title: "Welcome"
 description: "Shuttle is a Rust-native cloud development platform that lets you deploy your Rust apps for free."
-size: "wide"
 ---
 
 <CardGroup>
-  <Card title="Get Started" icon="circle-play" href="/getting-started/quick-start">
-    The quickstart guide to set up Shuttle
+  <Card title="Get Started" icon="circle-play" href="/getting-started/installation">
+    Installation and quickstart guide
   </Card>
   <Card
     title="What is Shuttle?"
     icon="info"
     href="/introduction/what-is-shuttle"
   >
-    Learn more about how Shuttle can help you deploy your app
+    Learn more about how Shuttle can help you deploy your Rust app
   </Card>
   <Card
-    title="Create & deploy a serverless calendar app"
-    icon="calendar"
-    href="/tutorials/serverless-calendar-app"
+    title="Examples"
+    icon="book"
+    href="/examples/axum" {/* TODO: Make examples overview page */}
   >
-    Learn how to deploy an example Calendar App with Shuttle
   </Card>
-  <Card title="Get Involved" icon="hand" href="/community/get-involved">
-    If you are wondering what the best way is to get involved, here's how
+  <Card
+    title="Migration"
+    icon="Rocket"
+    href="/migration/migrating-to-shuttle"
+  >
+    Migrate an existing project to Shuttle
   </Card>
 </CardGroup>
 
@@ -53,5 +55,8 @@ size: "wide"
     color="#1DA1F2"
   >
     Go to @shuttle_dev on Twitter
+  </Card>
+  <Card title="Get Involved" icon="hand" href="/community/get-involved">
+    If you are wondering what the best way is to get involved, here's how
   </Card>
 </CardGroup>
