feat: add project structure doc

--- a/configuration/project-name.mdx
+++ b/configuration/project-name.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Shuttle Project Name"
-description: "How project names work"
+title: Project name
+description: How Shuttle project names work
 ---
 
 Your Shuttle Project Name determines which subdomain your project is hosted on (`https://<project-name>.shuttleapp.rs/`).
@@ -48,4 +48,4 @@ This will create a new Axum-based project in `some-directory` and update the nam
 ## Workspaces
 
 If your project is a cargo workspace the name will be taken from a `Shuttle.toml` in the root of the workspace, or
-from the directory name of the workspace. See [workspaces](/getting-started/workspaces).
+from the directory name of the workspace. See [Project structure](/configuration/project-structure).
