--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -1,29 +1,39 @@
 ---
 title: "Welcome"
 description: "Shuttle is a Rust-native cloud development platform that lets you deploy your Rust apps for free."
-size: "wide"
 ---
 
 <CardGroup>
-  <Card title="Get Started" icon="circle-play" href="/getting-started/quick-start">
-    The quickstart guide to set up Shuttle
+  <Card
+    title="Get Started"
+    icon="circle-play"
+    color="#3d3"
+    href="/getting-started/installation"
+  >
+    Installation and quickstart guide
   </Card>
   <Card
     title="What is Shuttle?"
     icon="info"
     href="/introduction/what-is-shuttle"
+    color="#33f"
   >
-    Learn more about how Shuttle can help you deploy your app
+    Learn more about how Shuttle can help you deploy your Rust app
   </Card>
   <Card
-    title="Create & deploy a serverless calendar app"
-    icon="calendar"
-    href="/tutorials/serverless-calendar-app"
+    title="Examples"
+    icon="book"
+    href="/examples/axum"
+    color="#f8d5F2"
   >
-    Learn how to deploy an example Calendar App with Shuttle
+    Get started from one of many templates
   </Card>
-  <Card title="Get Involved" icon="hand" href="/community/get-involved">
-    If you are wondering what the best way is to get involved, here's how
+  <Card
+    title="Migration"
+    icon="Rocket"
+    href="/migration/migrating-to-shuttle"
+  >
+    Migrate an existing project to Shuttle
   </Card>
 </CardGroup>
 
@@ -33,25 +43,33 @@ size: "wide"
   <Card
     title="Give us a star on GitHub"
     icon="star"
+    color="#fbdf24"
     href="https://github.com/shuttle-hq/shuttle"
-    color="#fbbf24"
   >
     Check us out at shuttle-hq/shuttle
   </Card>
   <Card
     title="Join our Discord server"
     icon="discord"
-    href="https://discord.com/invite/shuttle"
     color="#5865F2"
+    href="https://discord.com/invite/shuttle"
   >
     Click to accept invite
   </Card>
   <Card
     title="Follow us on Twitter"
     icon="twitter"
-    href="https://twitter.com/shuttle_dev"
     color="#1DA1F2"
+    href="https://twitter.com/shuttle_dev"
   >
     Go to @shuttle_dev on Twitter
+  </Card>
+  <Card
+    title="Get Involved"
+    icon="hand"
+    color="#525"
+    href="/community/get-involved"
+  >
+    If you are wondering what the best way is to get involved, here's how
   </Card>
 </CardGroup>
