--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -24,7 +24,7 @@ description: "Shuttle is a Rust-native cloud development platform that lets you 
     title="Examples"
     icon="book"
     href="/examples/axum"
-    color="#f8d5F2"
+    color="#f8b5F2"
   >
     Get started from one of many templates
   </Card>
@@ -37,7 +37,7 @@ description: "Shuttle is a Rust-native cloud development platform that lets you 
   </Card>
 </CardGroup>
 
-### Your input means the 🌎 to us
+---
 
 <CardGroup>
   <Card
@@ -70,6 +70,6 @@ description: "Shuttle is a Rust-native cloud development platform that lets you 
     color="#525"
     href="/community/get-involved"
   >
-    If you are wondering what the best way is to get involved, here's how
+    If you are wondering about the best way to get involved, here's how
   </Card>
 </CardGroup>
