--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -2,10 +2,14 @@
 title: "Shuttle AWS RDS"
 ---
 
+<Snippet file="pro-feature.mdx" />
+
 This plugin provisions databases on AWS RDS using [Shuttle](https://www.shuttle.rs). The following three engines are supported:
 - Postgres
 - MySql
 - MariaDB
+
+{/* TODO: Write more about the advantages of RDS vs shared */}
 
 Shuttle makes sure that any data stored in your provisioned database is stored permanently and will persist if you redeploy your server via `cargo shuttle deploy`, as well as if you restart your service via `cargo shuttle project restart`.
 
@@ -20,9 +24,9 @@ used with the following attribute paths:
 | MariaDB  | `cargo add shuttle-aws-rds --features mariadb`  | shuttle_aws_rds::MariaDB  |
 
 ### Parameters
-| Parameter | Type | Default  | Description                                                                                             |
-|-----------|------|----------|---------------------------------------------------------------------------------------------------------|
-| local_uri | str  | `None`   | Rather connect `cargo shuttle run` to this database and don't spin up a Docker instance of the database |
+| Parameter | Type | Default | Description |
+|-----------|------|---------|-------------|
+| local_uri | str  | `None`  | On local runs, connect to this database instead of starting a Docker container for it. |
 
 When setting the `local_uri` you can also insert secrets from `Secrets.toml` using string interpolation. To insert the
 `PASSWORD` secret, pass it in like this:
@@ -41,14 +45,15 @@ The URI should be formatted according to the
 [MySql and MariaDB](https://dev.mysql.com/doc/refman/8.0/en/connecting-using-uri-or-key-value-pairs.html#connecting-using-uri)
 documentation, depending on which one you're using.
 
-If you do not specify a `local_uri`, then shuttle will attempt to spin up a docker instance and launch the database inside of it.
-For this to succeed, you must have docker installed and you must also have started the docker engine. If you have not used docker
+If you do not specify a `local_uri`, then cargo-shuttle will attempt to spin up a Docker container and launch the database inside of it.
+For this to succeed, you must have Docker installed and you must also have started the Docker engine. If you have not used Docker
 before, the easiest way is to [install the desktop app](https://docs.docker.com/get-docker/) and then launch it in order to start
-the docker engine.
+the Docker engine.
 
 ## Example
+
 This snippet shows the main function of a tide app that uses the `shuttle_aws_rds::Postgres` attribute to provision an RDS Postgres database.
-It gives you an authenticated  [sqlx Pool](https://docs.rs/sqlx/latest/sqlx/pool/index.html), which you can use to interact with the database.
+It gives you an authenticated [sqlx Pool](https://docs.rs/sqlx/latest/sqlx/pool/index.html), which you can use to interact with the database.
 
 ```rust main.rs
 #[shuttle_runtime::main]
@@ -68,10 +73,4 @@ async fn tide(#[shuttle_aws_rds::Postgres] pool: PgPool) -> ShuttleTide<MyState>
 }
 ```
 
-The full example can be found on [GitHub.](https://github.com/shuttle-hq/shuttle-examples/tree/main/tide/postgres)
-
-## Deletion
-
-Currently you can't safely delete your own AWS RDS instance at the moment - we're working on implementing functionality for self-service database deletion. In the meantime, feel free to [reach out to us](https://www.shuttle.rs/contact) or open a help thread on our Discord if you need any assistance with this.
-
-Note that if you do accidentally drop your provisioned database, you will need to [contact us](https://www.shuttle.rs/contact) to assist you with your issue or you can open a help thread on our Discord server.
+The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/tide/postgres).
