--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -15,6 +15,8 @@ Run it with:
 curl -sSfL https://www.shuttle.rs/install | bash
 ```
 
+<Note>cargo-shuttle's MSRV is 1.70. You can verify by running `cargo --version`.</Note>
+
 On Windows, use one of the methods below.
 
 ### Pre-built binary
