--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -15,8 +15,6 @@ Run it with:
 curl -sSfL https://www.shuttle.rs/install | bash
 ```
 
-<Note>cargo-shuttle's MSRV is 1.70. You can verify by running `cargo --version`.</Note>
-
 On Windows, use one of the methods below.
 
 ### Pre-built binary
@@ -38,6 +36,8 @@ Although a bit slower, you can also install directly with cargo:
 ```sh
 cargo install cargo-shuttle
 ```
+
+<Note>Installing cargo-shuttle from source requires Rust 1.70+. You can verify by running `cargo --version`.</Note>
 
 <Note>If you are using an M1/M2 Mac, `cargo install cargo-shuttle` might not work for you due to an issue with the `cargo-generate` upstream dependency. In those cases, it is advised to install Shuttle with `binstall`.</Note>
 
