Add MSRV note (#210)
* Update installation.mdx

Added Note that states MSRV of rust being 1.70

* nit: move to install from source section

---------

Co-authored-by: jonaro00 <54029719+jonaro00@users.noreply.github.com>

--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -37,6 +37,8 @@ Although a bit slower, you can also install directly with cargo:
 cargo install cargo-shuttle
 ```
 
+<Note>Installing cargo-shuttle from source requires Rust 1.70+. You can verify by running `cargo --version`.</Note>
+
 <Note>If you are using an M1/M2 Mac, `cargo install cargo-shuttle` might not work for you due to an issue with the `cargo-generate` upstream dependency. In those cases, it is advised to install Shuttle with `binstall`.</Note>
 
 ### Arch Linux
