--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Secrets"
+title: Secrets
 description: Including secrets in your deployment
 ---
 
@@ -27,7 +27,6 @@ If you don't have a `Secrets.dev.toml` file, `Secrets.toml` will be used locally
 both secret files with some of the same secrets for both local runs and deployments, you have to duplicate the secret across both 
 files.
 
-
 ## Example
 This snippet shows a Shuttle rocket main function that uses the `shuttle_secrets::Secrets` attribute to gain access to a `SecretStore`.
 
@@ -51,6 +50,15 @@ async fn rocket(
 ```
 
 The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/secrets)
+
+## Deleting secrets
+
+This command will delete *all* secrets from your project.
+Re-deploy with an updated `Secrets.toml` to add them back.
+
+```bash
+cargo shuttle resource delete secrets
+```
 
 ## Caveats
 
