--- a/resources/shuttle-turso.mdx
+++ b/resources/shuttle-turso.mdx
@@ -6,7 +6,7 @@ This plugin allows services to connect to a [Turso](https://turso.tech) database
 
 ## Usage
 
-**IMPORTANT:** Currently Shuttle isn't able to provision a Turso database for you (yet). This means you will have to create an account on their [website](https://turso.tech/) and follow the few steps required to create a database and create a token to access it.
+<Note>**IMPORTANT:** Currently Shuttle isn't able to provision a Turso database for you (yet). This means you will have to create an account on their [website](https://turso.tech/) and follow the few steps required to create a database and create a token to access it.</Note>
 
 Add `shuttle-turso` and `libsql-client` to the dependencies for your service by running `cargo add shuttle-turso libsql-client`. This resource will be provided by adding the `shuttle_turso::Turso` attribute to your Shuttle main decorated function.
 
