fix: migration filename

--- a/examples/axum-postgres.mdx
+++ b/examples/axum-postgres.mdx
@@ -91,7 +91,7 @@ struct Todo {
 }
 ```
 
-```sql migrations/schema.sql
+```sql migrations/1_schema.sql
 DROP TABLE IF EXISTS todos;
 
 CREATE TABLE todos (
