Add RDS instance info to RDS page

--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -10,6 +10,18 @@ This plugin provisions databases on AWS RDS using [Shuttle](https://www.shuttle.
 - MariaDB
 
 {/* TODO: Write more about the advantages of RDS vs shared */}
+The RDS instance created by Shuttle has the following specifications and features by default:
+- 2 vCPU
+- 1 GB Memory
+- 30 GB Storage
+- Backups Disabled
+- Single Availability Zone
+- 1 Node
+- No Proxy
+
+The pricing of this instance can be found in the Pro Add-ons section of the [pricing page](https://www.shuttle.rs/pricing).
+
+If you require a different configuration, please contact us on [Discord](https://discord.gg/shuttle) or email us at hello@shuttle.rs. We can provision any size or configuration of RDS to suit your needs - a full list of RDS features can be found [here](https://aws.amazon.com/rds/features/)
 
 Shuttle makes sure that any data stored in your provisioned database is stored permanently and will persist if you redeploy your server via `cargo shuttle deploy`, as well as if you restart your service via `cargo shuttle project restart`.
 
