--- a/examples/axum-jwt-authentication.mdx
+++ b/examples/axum-jwt-authentication.mdx
@@ -247,7 +247,7 @@ Accessing the private endpoint with the token will now succeed:
 $ curl --header "Authorization: Bearer <token>" http://localhost:8000/private
 ```
 
-The token is set to expire in 5 minutus, so wait a while and try to access the private endpoint again. Once the token has expired, a user will need to get a new token from login.
+The token is set to expire in 5 minutes, so wait a while and try to access the private endpoint again. Once the token has expired, a user will need to get a new token from login.
 
 Looking to extend this example? Here's a couple of ideas to get you started:
 - Create a frontend to host the login
