--- a/examples/examples.mdx
+++ b/examples/examples.mdx
@@ -2,7 +2,7 @@
 title: "Examples"
 ---
 
-{/* TOOD: Add this page if it gets more content */}
+{/* TODO: Add this page if it gets more content */}
 
 This section of the docs has easy to follow guides for getting started with all supported frameworks.
 
