--- a/examples/serenity-todo.mdx
+++ b/examples/serenity-todo.mdx
@@ -4,7 +4,7 @@ title: "Todo List Bot"
 
 ### Prerequisites
 
-In this example we will deploy a Serenity bot with Shuttle that can add, list and complete todos using [Application Commands](https://discord.com/developers/docs/interactions/application-commands). To persist the todos we need a database. We will have Shuttle provison a PostgreSQL database for us by passing `#[shared::Postgres] pool: PgPool` as an argument to our `main` function.
+In this example we will deploy a Serenity bot with Shuttle that can add, list and complete todos using [Application Commands](https://discord.com/developers/docs/interactions/application-commands). To persist the todos we need a database. We will have Shuttle provision a PostgreSQL database for us by passing `#[shared::Postgres] pool: PgPool` as an argument to our `main` function.
 
 To run this bot we need a valid Discord Token. To get started log in to the [Discord developer portal](https://discord.com/developers/applications).
 
