--- a/getting-started/quick-start.mdx
+++ b/getting-started/quick-start.mdx
@@ -27,7 +27,7 @@ And to deploy it:
 cargo shuttle deploy --allow-dirty
 ```
 
-<Info>`--allow-dirty` allows deploying without your changes being commited to git.</Info>
+<Info>`--allow-dirty` allows deploying without your changes being committed to git.</Info>
 
 You can also run your project locally for development, check out our [local run](./local-run) section.
 
