--- a/tutorials/send-your-logs-to-datadog.mdx
+++ b/tutorials/send-your-logs-to-datadog.mdx
@@ -256,8 +256,8 @@ LOG_LEVEL = "INFO,shuttle_datadog_logs=DEBUG"
 and `Secrets.toml`
 
 ```toml
-DD_API_KEY = "your-datdog-api-key"
-DD_TAGS = "env:prod,service:shutle-datadog-logs"
+DD_API_KEY = "your-datadog-api-key"
+DD_TAGS = "env:prod,service:shuttle-datadog-logs"
 LOG_LEVEL = "INFO"
 ```
 
