--- a/examples/rocket-jwt-authentication.mdx
+++ b/examples/rocket-jwt-authentication.mdx
@@ -36,7 +36,7 @@ edition = "2021"
 chrono = "0.4.23"
 jsonwebtoken = { version = "8.1.1", default-features = false }
 lazy_static = "1.4.0"
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
+rocket = { version = "0.5.0-rc.4", features = ["json"] }
 serde = { version = "1.0.148", features = ["derive"] }
 shuttle-rocket = "0.32.0"
 shuttle-runtime = "0.32.0"
@@ -177,9 +177,9 @@ impl<'r> FromRequest<'r> for Claims {
 
     async fn from_request(request: &'r rocket::Request<'_>) -> Outcome<Self, Self::Error> {
         match request.headers().get_one(AUTHORIZATION) {
-            None => Outcome::Failure((Status::Forbidden, AuthenticationError::Missing)),
+            None => Outcome::Error((Status::Forbidden, AuthenticationError::Missing)),
             Some(value) => match Claims::from_authorization(value) {
-                Err(e) => Outcome::Failure((Status::Forbidden, e)),
+                Err(e) => Outcome::Error((Status::Forbidden, e)),
                 Ok(claims) => Outcome::Success(claims),
             },
         }
