--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -26,7 +26,7 @@ which will automatically download the correct binary for your system.
 To install with `cargo-binstall`, run:
 
 ```sh
-cargo binstall cargo-shuttle
+cargo install cargo-shuttle
 ```
 
 ### From source
